home spacing teaching and email section fix - desktop and mobile

--- a/src/components/RenderRouter/HeroItem.scss
+++ b/src/components/RenderRouter/HeroItem.scss
@@ -1053,7 +1053,7 @@
   .partialConnect {
     position: relative;
     width: 100vw;
-    margin-top: 10vw;
+    margin-top: 30vw;
   }
 
   .partialConnectImage {
